// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadMoreButton with darkTheme should render 1`] = `
<ReadMoreButton
  darkTheme={true}
  label="label"
  link="link"
  openInNewTab={false}
/>
`;

exports[`ReadMoreButton without darkTheme should render 1`] = `
<ReadMoreButton
  darkTheme={false}
  label="label"
  link="link"
  openInNewTab={false}
/>
`;
